Tile first version

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="icon" type="image/x-icon" href="./assets/favicon.ico"/>
  
     <script src="libraries/p5.min.js"></script>
-    <script type="module" src="main.js"></script>
+    <script type="module" src="App.js"></script>
   </head>
 
   <body>
